--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1087,7 +1087,7 @@ html {
   text-align: left;
   left: -65px !important;
 }
-.ncpi .pi-accordion-table-list .pi-action-content button {
+.ncpi .pi-accordion-table-list .pi-action-content .pi-active {
   padding: 0px 5px;
   position: relative;
   top: 3px;
@@ -1140,14 +1140,14 @@ html {
   font-size: 14px;
   text-align: left;
 }
-.ncpi .pi-info-table-content .pi-info-table td .pi-field-checkbox {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td .pi-field-checkbox {
   margin-bottom: 0;
 }
-.ncpi .pi-info-table-content .pi-info-table td input[type=number] {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number] {
   font-size: 14px;
 }
-.ncpi .pi-info-table-content .pi-info-table td input[type=number],
-.ncpi .pi-info-table-content .pi-info-table td input[type=text] {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number],
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=text] {
   padding: 8px !important;
   border: 1px solid rgba(221, 221, 221, 0.6588235294);
   outline: none;
@@ -1156,18 +1156,18 @@ html {
   line-height: 100%;
   height: 35px;
 }
-.ncpi .pi-info-table-content .pi-info-table td input[type=number]:focus,
-.ncpi .pi-info-table-content .pi-info-table td input[type=text]:focus {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number]:focus,
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=text]:focus {
   border: 1px solid #4C6FFF !important;
   z-index: 5;
 }
 @media screen and (max-width: 500px) {
-  .ncpi .pi-info-table-content .pi-info-table td input[type=number],
-.ncpi .pi-info-table-content .pi-info-table td input[type=text] {
+  .ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number],
+.ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=text] {
     width: 65px;
   }
 }
-.ncpi .pi-info-table-content .pi-info-table td textarea {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td textarea {
   border-radius: 5px;
   margin-top: 10px;
   outline: none;
@@ -1176,18 +1176,18 @@ html {
   width: 100%;
   color: #718096;
 }
-.ncpi .pi-info-table-content .pi-info-table td textarea:focus {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td textarea:focus {
   border: 1px solid #4C6FFF !important;
 }
-.ncpi .pi-info-table-content .pi-info-table td select {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td select {
   outline: none;
   border: 1px solid #CBD5E0;
 }
-.ncpi .pi-info-table-content .pi-info-table td select:focus {
+.ncpi .pi-info-table-content .pi-info-table tbody tr td select:focus {
   border: 1px solid #4C6FFF !important;
 }
 @media screen and (max-width: 550px) {
-  .ncpi .pi-info-table-content .pi-info-table td select {
+  .ncpi .pi-info-table-content .pi-info-table tbody tr td select {
     width: 60px;
   }
 }
@@ -1283,6 +1283,7 @@ html {
   background-color: #f8f8f8;
   margin-left: 5px;
   outline: none;
+  line-height: 100%;
 }
 
 /*-------------------------------------------------------------- 
@@ -2054,7 +2055,7 @@ html {
   top: -2px !important;
 }
 .wp-admin .pi-table tr th:first-child input[type=checkbox] {
-  top: 0px !important;
+  top: 1px !important;
 }
 .wp-admin .pi-info-table .pi-field-checkbox select {
   padding: 5px 6px !important;
@@ -3381,6 +3382,7 @@ td {
   font-size: 11px !important;
   border-radius: 0px 4px 4px 0 !important;
   background-position-x: 92% !important;
+  line-height: 100%;
 }
 .pi-field-radio-input .pi-times,
 .pi-field-checkbox-input .pi-times {
@@ -3692,6 +3694,27 @@ td {
   top: 10px;
   bottom: 0;
   left: -12px;
+  height: 100%;
+}
+.ncpi .pi-lead ul li {
+  font-size: 12px;
+  color: #718096;
+  padding: 5px 0 5px 15px;
+  font-weight: 500;
+  position: relative;
+}
+.ncpi .pi-lead ul li span {
+  width: 20px;
+  height: 20px;
+  display: inline-block;
+  border-radius: 5px;
+  position: absolute;
+  left: -15px;
+}
+.ncpi .pi-lead ul li b {
+  float: right;
+  margin-right: 25%;
+  font-weight: 500;
 }
 .ncpi .pi-summery ul {
   margin-top: 10px;
