--- a/src/admin/scss/partials/_main.scss
+++ b/src/admin/scss/partials/_main.scss
@@ -1083,10 +1083,6 @@ html {
   top: 30px;
   left: -70px;
 }
-.ncpi .pi-accordion-table-list .pi-action-content button svg {
-  position: relative;
-  top: 2px;
-}
 .ncpi .pi-info-table-content {
   margin-top: 20px;
 }
@@ -1140,7 +1136,6 @@ html {
 }
 .ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number] {
   font-size: 14px;
-  height: 35px !important;
 }
 .ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=number],
 .ncpi .pi-info-table-content .pi-info-table tbody tr td input[type=text] {
@@ -1262,7 +1257,7 @@ html {
   font-weight: 500;
 }
 .ncpi .pi-calculation table tr:last-child td {
-  padding: 25px 0 15px 15px;
+  padding: 15px 0 15px 15px;
   font-size: 20px;
   font-weight: bold;
 }
@@ -1416,7 +1411,7 @@ html {
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-right-content .pi-right-content-data {
-    padding: 30px 0;
+    padding: 30px 15px;
   }
 }
 .ncpi .pi-empty-content {
@@ -1641,6 +1636,11 @@ html {
   margin-bottom: 25px;
   box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.06);
 }
+@media screen and (max-width: 768px) {
+  .ncpi .pi-search-bar {
+    display: block;
+  }
+}
 @media screen and (max-width: 550px) {
   .ncpi .pi-search-bar {
     width: 100% px;
@@ -1650,11 +1650,15 @@ html {
 .ncpi .pi-search-bar button {
   background: transparent;
   border: 1px solid #dddddda8;
-  padding: 7px 8px;
+  padding: 5px 8px;
   border-radius: 8px;
-  line-height: 10px;
   margin-left: 10px;
   cursor: pointer;
+}
+@media screen and (max-width: 768px) {
+  .ncpi .pi-search-bar button {
+    margin-left: 0px;
+  }
 }
 .ncpi .pi-search-bar .pi-total-list p {
   margin: 0;
@@ -2123,6 +2127,10 @@ html {
 .wp-admin .pi-accordion-table-list .pi-action-content button svg {
   top: 0 !important;
 }
+.wp-admin .pi-checklist-content input[type=checkbox] {
+  position: relative !important;
+  top: -3px !important;
+}
 
 .react-datepicker {
   border: 1px solid #CBD5E0 !important;
@@ -2235,11 +2243,6 @@ ul {
 }
 .twentytwenty-theme .pi-accordion-table {
   padding: 0;
-}
-.twentytwenty-theme input[type=checkbox] {
-  zoom: 0.6 !important;
-  position: relative;
-  top: 0px;
 }
 .twentytwenty-theme .pi-field-checkbox-input input[type=checkbox] {
   margin-right: 15px;
@@ -2683,13 +2686,19 @@ ul {
 .ncpi .pi-modal-sidebar-two .pi-checklist-head {
   border-bottom: 1px solid #dddddda8;
   padding: 10px 0;
+  display: flex;
+}
+.ncpi .pi-modal-sidebar-two .pi-checklist-head input {
+  width: 70% !important;
 }
 .ncpi .pi-modal-sidebar-two .pi-checklist-head span {
   font-size: 14px;
   color: #718096;
+  margin-left: auto;
 }
 .ncpi .pi-modal-sidebar-two .pi-checklist ul {
   margin-bottom: 0px;
+  margin-top: 15px;
 }
 .ncpi .pi-modal-sidebar-two .pi-checklist ul li {
   font-size: 12px;
@@ -2713,14 +2722,11 @@ ul {
   margin-left: -10px;
   padding: 7px 15px;
 }
-.ncpi .pi-modal-sidebar-two .pi-checklist ::-moz-placeholder {
-  color: #000;
-}
-.ncpi .pi-modal-sidebar-two .pi-checklist :-ms-input-placeholder {
-  color: #000;
-}
-.ncpi .pi-modal-sidebar-two .pi-checklist ::placeholder {
-  color: #000;
+.ncpi .pi-modal-sidebar-two .pi-checklist input[type=url]:focus,
+.ncpi .pi-modal-sidebar-two .pi-checklist input[type=number]:focus,
+.ncpi .pi-modal-sidebar-two .pi-checklist input[type=email]:focus,
+.ncpi .pi-modal-sidebar-two .pi-checklist input[type=text]:focus {
+  border: none;
 }
 .ncpi .pi-modal-sidebar-two .pi-checklist .pi-action-content {
   margin-left: 30px;
@@ -3553,28 +3559,26 @@ ul {
   border-radius: 0 8px 8px 0;
   background-color: #FAFAFB;
 }
-.ncpi .pi-search-btn .pi-search-form ul li:first-child svg {
-  top: 0px;
-}
 .ncpi .pi-search-btn .pi-search-form ul li:last-child {
   border-left: 1px solid #dddddda8;
   padding: 6px 8px;
   margin-left: 10px;
   cursor: pointer;
 }
+.ncpi .pi-search-btn .pi-search-form ul li:last-child span {
+  display: flex;
+}
 .ncpi .pi-search-btn .pi-search-form ul li {
-  padding: 6px 5px;
+  padding: 9px 5px;
   padding-left: 20px;
   margin: 0;
+  display: flex;
+  align-items: center;
 }
 @media screen and (max-width: 820px) {
   .ncpi .pi-search-btn .pi-search-form ul li {
     padding-left: 15px;
   }
-}
-.ncpi .pi-search-btn .pi-search-form ul li svg {
-  position: relative;
-  top: 4px;
 }
 .ncpi .pi-search-btn .pi-search-form ul li select {
   border: none;
